--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Aprendiendo git</title>
   </head>
   <body>
-    <h1>Aprendiendo git</h1>
+    <h1>Aprendiendo git desde la rama main</h1>
     <p>Mis primeros pasos con git</p>
+    <ul>
+      <li>elemento 1</li>
+      <li>elemento 2</li>
+      <li>elemento 3</li>
+      <li>elemento 4</li>
+      <li>elemento 5</li>
+    </ul>
   </body>
 </html>
