--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Aprendiendo git</title>
   </head>
   <body>
-    <h1>Aprendiendo git</h1>
+    <h1>Aprendiendo git desde la rama HTML</h1>
     <p>Mis primeros pasos con git</p>
+    <ol>
+      <li>elemento 1</li>
+      <li>elemento 2</li>
+      <li>elemento 3</li>
+      <li>elemento 4</li>
+      <li>elemento 5</li>
+    </ol>
+    <script src="index.js"></script>
   </body>
 </html>
