--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li>elemento 2</li>
       <li>elemento 3</li>
       <li>elemento 4</li>
+      <li>elemento 5</li>
+      <li>elemento 6</li>
     </ol>
 
     <script src="index.js"></script>
